--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,18 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "migrate": "node src/services/runMigrations.js",
+    "seed": "node src/services/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Skill Assessment Backend using Node.js, Express, and MySQL (Sequelize)",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
